Add mobile navigation features and styles
- Introduced a hamburger button for mobile menu toggling in `index.html`.
- Implemented JavaScript functionality to handle menu visibility in `script.js`.
- Added responsive styles for mobile navigation and buttons in `styles.css`.
- Ensured desktop and mobile layouts are distinct for better user experience.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
           <span class="logo-text">ARQUITECTURA</span>
         </div>
 
+        <!-- Botón hamburguesa para móviles -->
+        <button class="navbar-toggle" aria-label="Toggle menu">
+          <i class="elementor-menu-toggle__icon elementor-menu-toggle__icon--open eicon-menu-bar fas fa-bars"></i>
+          <i class="elementor-menu-toggle__icon elementor-menu-toggle__icon--close eicon-close fas fa-times"></i>
+        </button>
+
         <!-- Menús en el centro -->
         <div class="navbar-menu">
           <div class="menu-item-wrapper">
@@ -69,9 +75,15 @@
               <a href="#formulario" class="submenu-item">Formulario</a>
             </div>
           </div>
+
+          <!-- Botones como items del menú en móviles -->
+          <div class="navbar-actions-mobile">
+            <a href="#" class="menu-item menu-item-button">Iniciar Sesión</a>
+            <a href="#" class="menu-item menu-item-button menu-item-button-primary">Contactar</a>
+          </div>
         </div>
 
-        <!-- Botones a la derecha -->
+        <!-- Botones a la derecha (solo desktop) -->
         <div class="navbar-actions">
           <button class="btn btn-secondary">Iniciar Sesión</button>
           <button class="btn btn-primary">Contactar</button>
