--- a/admin.html
+++ b/admin.html
@@ -84,6 +84,11 @@
     <main class="admin-main">
       <header class="admin-header">
         <h1 id="section-title">Panel de Administración</h1>
+        <div class="admin-header-actions">
+          <button id="btn-publish" class="btn-publish">
+            <i class="fas fa-rocket"></i> Publicar
+          </button>
+        </div>
         <div id="notification" class="notification" style="display: none;"></div>
       </header>
       
