Enhance admin panel with new sections for Banner, Gallery, and Navbar
- Added new sections in `admin.html` for managing Banner and Gallery content, including forms for image uploads and text inputs.
- Implemented Navbar management with options to add menu items and configure links.
- Updated `admin.js` to handle rendering and saving of new content types, including validation and error handling.
- Enhanced `admin.css` for styling new form elements and buttons.
- Modified `load-content.js` to dynamically load and display content for the new sections.
- Updated `build-static.js` to ensure proper rendering of new content in the static site.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <p class="hero-pretitle" id="hero-pretitle" data-cms-field="pretitle">Diseño Arquitectónico de Excelencia</p>
           <h1 class="hero-title" id="hero-title" data-cms-field="title">ARQUITECTOS EN AREQUIPA</h1>
           <div class="hero-actions">
-            <button class="btn btn-hero" id="hero-button" data-cms-field="buttonText">CONTÁCTANOS</button>
+            <a href="#" class="btn btn-hero" id="hero-button" data-cms-field="buttonText">CONTÁCTANOS</a>
           </div>
         </div>
       </section>
